# vcpkg-github-repro-20240407

./: CMakeLists.txt  README.md  build-macos.sh  build-windows.cmd  test.c  vcpkg.json
.github/workflows/: build.yml
